fix spacing issues for columns

--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,13 @@ h1, h2, h3, h4, h5, h6, figure {
   line-height: 1.5;
   margin-bottom: 30px;
 }
+#gtco-header h3 {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+  color: white;
+}
 
 #gtco-header,
 #gtco-counter,
@@ -2129,5 +2136,46 @@ form label {
   font-size: 26px;
   color: #a6a6ed;
 }
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+
+/* COLUMB STUFF MAYBE
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+  max-width: 400px;
+  
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  max-width: 400px;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
 
 /*# sourceMappingURL=style.css.map */
